engine-bench-harbor/jobs/2026-01-22__16-04-36/df-006-nidoking__8RmfvK5/verifier/test-stdout.txt
=== EngineBench Verifier ===
Working directory: /app
Card path: /app/src/df/cards/df_006_nidoking.rs

Injecting eval tests from /tests/df_006_nidoking_eval.rs

=== Running cargo check ===
    Updating crates.io index
 Downloading crates ...
  Downloaded itoa v1.0.17
  Downloaded tcg_rules_ex v0.1.0
  Downloaded rand_chacha v0.3.1
  Downloaded cfg-if v1.0.4
  Downloaded quote v1.0.43
  Downloaded zmij v1.0.13
  Downloaded thiserror-impl v1.0.69
  Downloaded thiserror v1.0.69
  Downloaded rand_core v0.6.4
  Downloaded ppv-lite86 v0.2.21
  Downloaded getrandom v0.2.17
  Downloaded serde_json v1.0.149
  Downloaded unicode-ident v1.0.22
  Downloaded serde_derive v1.0.228
  Downloaded proc-macro2 v1.0.105
  Downloaded serde_core v1.0.228
  Downloaded memchr v2.7.6
  Downloaded serde v1.0.228
  Downloaded tcg_core v0.1.0
  Downloaded rand v0.8.5
  Downloaded zerocopy v0.8.33
  Downloaded syn v2.0.114
  Downloaded libc v0.2.180
   Compiling proc-macro2 v1.0.105
   Compiling quote v1.0.43
   Compiling unicode-ident v1.0.22
   Compiling serde_core v1.0.228
   Compiling libc v0.2.180
   Compiling syn v2.0.114
   Compiling serde v1.0.228
   Compiling zerocopy v0.8.33
   Compiling serde_derive v1.0.228
    Checking cfg-if v1.0.4
    Checking getrandom v0.2.17
   Compiling zmij v1.0.13
    Checking ppv-lite86 v0.2.21
    Checking rand_core v0.6.4
   Compiling serde_json v1.0.149
   Compiling thiserror v1.0.69
   Compiling thiserror-impl v1.0.69
    Checking rand_chacha v0.3.1
    Checking itoa v1.0.17
    Checking memchr v2.7.6
    Checking rand v0.8.5
    Checking tcg_rules_ex v0.1.0
    Checking tcg_core v0.1.0
    Checking tcg_expansions v0.1.0 (/app)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 20.11s
Compile exit code: 0

=== Running cargo test ===
   Compiling serde_core v1.0.228
   Compiling libc v0.2.180
   Compiling cfg-if v1.0.4
   Compiling getrandom v0.2.17
   Compiling zerocopy v0.8.33
   Compiling serde v1.0.228
   Compiling ppv-lite86 v0.2.21
   Compiling rand_core v0.6.4
   Compiling rand_chacha v0.3.1
   Compiling zmij v1.0.13
   Compiling memchr v2.7.6
   Compiling itoa v1.0.17
   Compiling thiserror v1.0.69
   Compiling serde_json v1.0.149
   Compiling rand v0.8.5
   Compiling tcg_rules_ex v0.1.0
   Compiling tcg_core v0.1.0
   Compiling tcg_expansions v0.1.0 (/app)
error[E0425]: cannot find value `ATTACK_1_NAME` in this scope
  --> src/df/cards/df_006_nidoking.rs:27:42
   |
27 |     fn eval_attack_1_name() { assert_eq!(ATTACK_1_NAME, "Linear Attack"); }
   |                                          ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ATTACK_1_DAMAGE` in this scope
  --> src/df/cards/df_006_nidoking.rs:29:44
   |
29 |     fn eval_attack_1_damage() { assert_eq!(ATTACK_1_DAMAGE, 0); }
   |                                            ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ATTACK_2_NAME` in this scope
  --> src/df/cards/df_006_nidoking.rs:31:42
   |
31 |     fn eval_attack_2_name() { assert_eq!(ATTACK_2_NAME, "Dark Horn"); }
   |                                          ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ATTACK_2_DAMAGE` in this scope
  --> src/df/cards/df_006_nidoking.rs:33:44
   |
33 |     fn eval_attack_2_damage() { assert_eq!(ATTACK_2_DAMAGE, 60); }
   |                                            ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ATTACK_1_TEXT` in this scope
  --> src/df/cards/df_006_nidoking.rs:36:50
   |
36 |     #[test] fn eval_attack_1_text() { assert_eq!(ATTACK_1_TEXT, "Choose 1 of your opponent's Pokémon. This attack does 30 damage to that ...
   |                                                  ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `ATTACK_2_TEXT` in this scope
  --> src/df/cards/df_006_nidoking.rs:37:50
   |
37 |     #[test] fn eval_attack_2_text() { assert_eq!(ATTACK_2_TEXT, "You may discard a Basic Pokémon or Evolution card from your hand. If you...
   |                                                  ^^^^^^^^^^^^^ not found in this scope

warning: unused import: `super::*`
  --> src/df/cards/df_006_nidoking.rs:44:9
   |
44 |     use super::*;
   |         ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `super::*`
   --> src/df/cards/df_006_nidoking.rs:419:9
    |
419 |     use super::*;
    |         ^^^^^^^^

error[E0425]: cannot find function `linear_attack_snipe_damage` in this scope
  --> src/df/cards/df_006_nidoking.rs:34:63
   |
34 |     #[test] fn eval_linear_attack_snipe_damage() { assert_eq!(linear_attack_snipe_damage(), 30); }
   |                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `linear_attack_snipe_scope` in this scope
  --> src/df/cards/df_006_nidoking.rs:35:62
   |
35 |     #[test] fn eval_linear_attack_snipe_scope() { assert_eq!(linear_attack_snipe_scope(), "OppBench"); }
   |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `linear_attack_snipe_damage` in this scope
   --> src/df/cards/df_006_nidoking.rs:410:20
    |
410 |         assert_eq!(linear_attack_snipe_damage(), 30);
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `linear_attack_snipe_scope` in this scope
   --> src/df/cards/df_006_nidoking.rs:411:20
    |
411 |         assert_eq!(linear_attack_snipe_scope(), "OppBench");
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
warning: `tcg_expansions` (lib test) generated 2 warnings
error: could not compile `tcg_expansions` (lib test) due to 10 previous errors; 2 warnings emitted

Test results: 0 passed / 0 total

=== Verifier complete ===
Score: 0.3
{
  "compile_ok": 1,
  "tests_passed": 0,
  "tests_total": 0,
  "pass_rate": 0.0,
  "score": 0.3
}
